--- a/templates/app/dummy.html
+++ b/templates/app/dummy.html
@@ -17,6 +17,7 @@
             <a href="{% url 'admin:index' %}" class="nav-link">Admin page</a>
             <a href="{% url 'home' %}" class="nav-link">Home page</a>
             <a href="{% url 'SchoolList' %}" class="nav-link">SchoolList</a>
+            <a href="{% url 'SchoolForm' %}" class="nav-link">SchoolCreate</a>
         </nav>
    
     <h1>Hello, world!</h1>
